[package]
name = "maya_vi"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = ["glow"] }
egui = "0.27.2"
url = "2.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
syntect = { version = "5.0", features = ["default-fancy"] }
lazy_static = "1.4.0"
arboard = "3.4.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
